fixed alignment issues on destination pages

--- a/index.css
+++ b/index.css
@@ -465,7 +465,7 @@ body {
   padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
@@ -544,6 +544,7 @@ body {
   
   .grid-container--destination {
     justify-items: start;
+    align-content: start;
       grid-template-areas: 
           '. title title .'
           '. image tabs .'
@@ -555,7 +556,7 @@ body {
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: min(8vw, 6rem);
     justify-content: start;
   }
 
